// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search component when logged in as a contract manager should render properly 1`] = `
<DocumentFragment>
  <div>
    <section
      class="section"
    >
      <h1
        class="lbh-heading-h1"
      >
        Find repair work order or property
      </h1>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <form>
          <label
            class="govuk-label lbh-label"
          >
            Search by work order reference, postcode or address
          </label>
          <input
            class="govuk-input lbh-input govuk-input--width-10"
            id="input-search"
            name="search-name"
            type="text"
            value=""
          />
          <div
            class="govuk-form-group lbh-form-group"
          >
            <button
              class="govuk-button lbh-button"
              data-module="govuk-button"
              type="submit"
            >
              Search
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Search component when logged in as a contractor should render properly 1`] = `
<DocumentFragment>
  <div>
    <section
      class="section"
    >
      <h1
        class="lbh-heading-h1"
      >
        Find repair work order
      </h1>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <form>
          <label
            class="govuk-label lbh-label"
          >
            Search by work order reference
          </label>
          <input
            class="govuk-input lbh-input govuk-input--width-10"
            id="input-search"
            name="search-name"
            type="text"
            value=""
          />
          <div
            class="govuk-form-group lbh-form-group"
          >
            <button
              class="govuk-button lbh-button"
              data-module="govuk-button"
              type="submit"
            >
              Search
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Search component when logged in as an agent should render properly 1`] = `
<DocumentFragment>
  <div>
    <section
      class="section"
    >
      <h1
        class="lbh-heading-h1"
      >
        Find repair work order or property
      </h1>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <form>
          <label
            class="govuk-label lbh-label"
          >
            Search by work order reference, postcode or address
          </label>
          <input
            class="govuk-input lbh-input govuk-input--width-10"
            id="input-search"
            name="search-name"
            type="text"
            value=""
          />
          <div
            class="govuk-form-group lbh-form-group"
          >
            <button
              class="govuk-button lbh-button"
              data-module="govuk-button"
              type="submit"
            >
              Search
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Search component when logged in as an authorisation manager should render properly 1`] = `
<DocumentFragment>
  <div>
    <section
      class="section"
    >
      <h1
        class="lbh-heading-h1"
      >
        Find repair work order or property
      </h1>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <form>
          <label
            class="govuk-label lbh-label"
          >
            Search by work order reference, postcode or address
          </label>
          <input
            class="govuk-input lbh-input govuk-input--width-10"
            id="input-search"
            name="search-name"
            type="text"
            value=""
          />
          <div
            class="govuk-form-group lbh-form-group"
          >
            <button
              class="govuk-button lbh-button"
              data-module="govuk-button"
              type="submit"
            >
              Search
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
